[workspace]
members = [
    "image_processing",
    "tg_controller",
]

[package]
name = "ryemage_bot"
version = "0.1.0"
edition = "2021"
authors = ["ideeockus"]

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
#pretty_env_logger = "0.5.0"
env_logger = "0.10"
tokio = { version = "1.31", features = ["full"] }
tg_controller = { path="tg_controller" }

[[bin]]
name = "tg_controller"
path = "src/main.rs"

