[package]
name = "image_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
kmeans_colors = "0.6"
palette = "0.7"
color_quant = "1.1"
rstar = "0.11"
#teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
#pretty_env_logger = "0.5.0"
#tokio = { version = "1.31", features = ["full"] }
memmap2 = "0.7"

[lib]
name = "image_processing"
path = "src/lib.rs"
